tests/baselines/reference/genericConstraint2.errors.txt
tests/cases/compiler/genericConstraint2.ts(11,7): error TS2420: Class 'ComparableString' incorrectly implements interface 'Comparable<string>'.
  Property 'comparer' is missing in type 'ComparableString' but required in type 'Comparable<string>'.
tests/cases/compiler/genericConstraint2.ts(21,17): error TS2344: Type 'ComparableString' does not satisfy the constraint 'Comparable<ComparableString>'.
  Property 'comparer' is missing in type 'ComparableString' but required in type 'Comparable<ComparableString>'.


==== tests/cases/compiler/genericConstraint2.ts (2 errors) ====
    interface Comparable<T> {
        comparer(other: T): number;
    }
    
    function compare<T extends Comparable<T>>(x: T, y: T): number {
        if (x == null) return y == null ? 0 : -1;
        if (y == null) return 1;
        return x.comparer(y);
    }
    
    class ComparableString implements Comparable<string>{
          ~~~~~~~~~~~~~~~~
!!! error TS2420: Class '{|ComparableString|0|}' incorrectly implements interface '{|Comparable|1|}<string>'.
!!! error TS2420:   Property 'comparer' is missing in type 'ComparableString' but required in type 'Comparable<string>'.
!!! related TS2728 tests/cases/compiler/genericConstraint2.ts:2:5: 'comparer' is declared here.
!!! annotated symbol 0 tests/cases/compiler/genericConstraint2.ts:11:7
!!! annotated symbol 1 tests/cases/compiler/genericConstraint2.ts:1:11
        constructor(public currentValue: string) { }
    
        localeCompare(other) {
            return 0;
        }
    }
    
    var a = new ComparableString("a");
    var b = new ComparableString("b");
    var c = compare<ComparableString>(a, b);
                    ~~~~~~~~~~~~~~~~
!!! error TS2344: Type '{|ComparableString|0|}' does not satisfy the constraint '{|Comparable|1|}<{|ComparableString|2|}>'.
!!! error TS2344:   Property 'comparer' is missing in type 'ComparableString' but required in type 'Comparable<ComparableString>'.
!!! related TS2728 tests/cases/compiler/genericConstraint2.ts:2:5: 'comparer' is declared here.
!!! annotated symbol 0 tests/cases/compiler/genericConstraint2.ts:11:7
!!! annotated symbol 1 tests/cases/compiler/genericConstraint2.ts:1:11
!!! annotated symbol 2 tests/cases/compiler/genericConstraint2.ts:11:7